<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_notice_num"
            style="@style/textStyle"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:text="1"
            android:textSize="14dp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_notice_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:text="@string/test_project"
                android:textColor="@color/c_black"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_notice_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/test_name"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" / "
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/tv_notice_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:text="@string/test_date"
                    android:textSize="10dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_notice_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_long_message"
                android:textColor="@color/c_black"
                android:textSize="12dp"
                android:visibility="gone" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/iv_notice_arrow"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:background="@color/c_white"
            android:backgroundTint="#FFFFFF"
            android:src="@drawable/icon_arrow_down"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>